# LokLM

./: # Lastenheft.md  .env.example  .gitignore  .lintstagedrc.cjs  .prettierignore  LICENSE  LokLM_PSP.drawio  README.md  THIRD_PARTY_NOTICES.md  drizzle.config.ts  electron.vite.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  typedoc.json  vitest.workspace.ts
.claude/: settings.local.json
.github/workflows/: build-translator-sidecar.yml  checks.yml  deploy-website.yml  purge-cdn.yml  release-installer.yml
docs/: Lastenheft.md  Pflichtenheft.md  db-normalization.md  licenses.md
docs/adr/: 0001-argon2id-password-kdf.md  0002-envelope-encryption-aes-gcm.md  0003-query-routing-und-summary-index.md  0004-adaptive-model-residency.md  README.md
docs/installer/: handoff-to-denys.md  visual-regression.md
docs/specs/: 2026-05-13-ap-1-1-project-skeleton-design.md  database-drizzle.md
docs/superpowers/plans/: 2026-05-20-custom-nsis-installer-implementation.md  2026-05-21-velopack-installer-mvp.md
drizzle/: 0000_adorable_cable.sql  0000_shiny_proteus.sql  0001_foamy_miek.sql  0002_violet_quicksilver.sql  0003_talented_crystal.sql  0004_quick_jasper_sitwell.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
installer/: installer.nsh
installer-ui/: electron-builder.json  i18n.js  index.html  lib.cjs  main.cjs  package.json  preload.cjs  renderer.js  stub.nsi  styles.css
installer-ui/__tests__/: i18n.test.ts  lib.test.ts
installer-wizard/: .gitignore  README.md  model-manifest.json  payload-manifest.json  stub.nsi
installer-wizard/frontend/: i18n.js  index.html  package.json  renderer.js  splash.html  styles.css  tauri-bridge.js
installer-wizard/src-tauri/: Cargo.toml  tauri.conf.json
installer-wizard/src-tauri/capabilities/: default.json
installer-wizard/src-tauri/examples/: probe_vram.rs
installer-wizard/src-tauri/icons/: icon.icns
installer-wizard/src-tauri/src/: commands.rs  main.rs
installer-wizard/src-tauri/src/installer/: archive.rs  download.rs  hardware.rs  linux.rs  mac.rs  mod.rs  models.rs  payload_manifest.rs  windows.rs
installer/assets/: export.mjs
papers/: 01-retrieval-pipeline.md  02-adaptive-topk.md  03-llm-modellvergleich.md  04-offline-uebersetzung.md  05-wikipedia-survival-korpus.md  README.md
papers/_evidence/: adaptive-topk.md  llm-comparison.md  methodology.md  retrieval-grid.md  translation.md  wikipedia-survival.md
resources/: icon.icns
resources/brand/: README.md
scripts/: after-pack-fuses.cjs  build-cuda-archive.mjs  build-icon.mjs  build-installer-deb-linux.mjs  build-installer-dmg.mjs  build-installer-splash.mjs  build-installer-stub-linux.mjs  build-installer-stub.mjs  build-installer-wizard.mjs  build-mac-payloads.mjs  build-payload-archive.mjs  build-translator-sidecar.ps1  bump-release.mjs  capture-screenshots.mjs  check-bundled-models.mjs  download-models.mjs  download-tessdata.mjs  sign-windows.mjs  upload-release.mjs  write-payload-manifest.mjs
sidecars/translator/: .gitignore  CMakeLists.txt  README.md
sidecars/translator/src/: main.cpp
src/main/: index.ts
src/main/db/: database.ts  migrate.ts  (+1 more)
src/preload/: index.ts
src/renderer/: index.html
src/shared/: authHelpers.smoke.test.ts  authHelpers.ts  authTypes.ts  citationContext.test.ts  citationContext.ts  citationMarkers.test.ts  citationMarkers.ts  docType.test.ts  docType.ts  documents.ts  fuzzyHighlight.test.ts  fuzzyHighlight.ts  index.ts  networkHelpers.test.ts  networkHelpers.ts  quiz.ts  settings.ts  setupTypes.ts  subtitles.ts  transcription.ts  translation.ts  writing.ts
tests/: README.md
tests/bench/: quiz-pipeline.ts
tests/e2e/: README.md  app.spec.ts  playwright.config.ts  settings.spec.ts
tests/evals/: ANLEITUNG-DOMINIK.md  README.md  aggregate-paper.ts  evalRunner.ts  metrics.ts  perf.ts  routing-eval-plan.md  run-datasets.ts  run.ts  runDir.ts  sweep.ts
tests/helpers/: electron-stub.ts
tests/installer/: artifact.test.ts  e2e.test.ts  export.test.ts
tests/integration/: README.md  auth-e2e.test.ts  auth-flow.test.ts  bundled-embedder-provider.test.ts  bundled-llm-provider.test.ts  bundled-reranker-provider.test.ts  change-password.test.ts  chat-persistence.test.ts  document-import.test.ts  document-pdf-e2e.test.ts  embedder-identity.test.ts  embedding-backfill.test.ts  folder-sync.test.ts  library-search.test.ts  ocr.test.ts  ollama-client.test.ts  ollama-embedder-provider.test.ts  ollama-llm-provider.test.ts  ollama-reranker-provider.test.ts  provider-registry.test.ts  qa-answer.test.ts  quiz-repo.test.ts  regenerate-recovery.test.ts  retrieval-corpus-e2e.test.ts  retrieval-pipeline.test.ts  settings-service.test.ts  workspace-crud.test.ts
tests/manual/: README.md  TEMPLATE.md
tests/unit/: README.md  audio-resample.test.ts  auth-crypto.test.ts  auth-inactivity.test.ts  auth-service-guards.test.ts  chrf.test.ts  chunk-options.test.ts  chunker.test.ts  contextualize.test.ts  conversation-switch-unload.test.ts  corpusAnswer.test.ts  eval-cases.test.ts  eval-metrics.test.ts  heuristics.test.ts  judge-prompt.test.ts  languageDetector.test.ts  llm-ask-nothink.test.ts  llm-utility-routing.test.ts  markdownParser.test.ts  matrix-configs.test.ts  model-downloader.test.ts  model-load-lock.test.ts  model-manifest.test.ts  model-paths.test.ts  ocr.test.ts  paper-aggregate.test.ts  parser-ocr.test.ts  parser.test.ts  prompt.test.ts  qa-answer-abort.test.ts  qa-pinned-budget.test.ts  qa-pinned-prompt.test.ts  queryBreadth.test.ts  queryRoute.test.ts  quiz-generate-question.test.ts  quiz-generate-unit.test.ts  quiz-generation.test.ts  quiz-scoring.test.ts  quiz-themes.test.ts  quiz-units.test.ts  (+14 more)
website/: .env.example  .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  screenshots-checklist.md  vitest.config.ts
website/public/: robots.txt
website/src/: content.config.ts  env.d.ts
website/tests/: dist-smoke.test.ts  public-assets.test.ts
(+456 files in other folders)
