[package]
name = "loklm-installer"
version = "0.2.6"
edition = "2021"
description = "LokLM Installer ( Tauri-based wizard )"
authors = ["Projektgruppe LokLM ( Denys Tudosa , Dominik Furlan )"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native directory picker on Windows ( IFileDialog COM via dialog plugin )
tauri-plugin-dialog = "2"
# Used for spawn_blocking around the install ( robocopy / powershell can
# block multiple seconds ) so the UI thread stays responsive.
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Hardware probe : wgpu enumerates GPUs cross-platform ( DX12/Vulkan/Metal ) ,
# sysinfo gives RAM + CPU brand. wgpu adds ~3-5 MB to the binary post-LTO ,
# which is acceptable for the tier-detection step ; if it becomes painful we
# swap to platform-specific APIs ( DXGI / sysfs / IOKit ).
wgpu = { version = "22", default-features = false, features = ["dx12", "metal"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Tier-marker timestamp. `time` is smaller than chrono and gives us ISO 8601
# via the `formatting` feature.
time = { version = "0.3", features = ["formatting", "macros"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
