[package]
name = "loklm-installer"
version = "0.2.9"
edition = "2021"
description = "LokLM Installer ( Tauri-based wizard )"
authors = ["Projektgruppe LokLM ( Denys Tudosa , Dominik Furlan )"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Native directory picker on Windows ( IFileDialog COM via dialog plugin )
tauri-plugin-dialog = "2"
# Used for spawn_blocking around the install ( robocopy / powershell can
# block multiple seconds ) so the UI thread stays responsive.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "fs", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Hardware probe : wgpu enumerates GPUs cross-platform ( DX12/Vulkan/Metal ) ,
# sysinfo gives RAM + CPU brand. wgpu adds ~3-5 MB to the binary post-LTO ,
# which is acceptable for the tier-detection step ; if it becomes painful we
# swap to platform-specific APIs ( DXGI / sysfs / IOKit ).
wgpu = { version = "22", default-features = false, features = ["dx12", "metal"] }
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }
# Tier-marker timestamp. `time` is smaller than chrono and gives us ISO 8601
# via the `formatting` feature.
time = { version = "0.3", features = ["formatting", "macros"] }
# Model downloader ( Phase 2 ) . rustls-tls avoids the OpenSSL build mess on
# Windows ; `stream` enables Body::bytes_stream for chunked progress. http2
# off : HF only does HTTP/1.1 for LFS downloads anyway.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
sha2 = "0.10"
futures-util = "0.3"
hex = "0.4"
# tar.zst extraction for the payload + cuda archives the wizard downloads.
# `zstd` bundles the C decoder ; `tar` is pure-rust. Both are widely used
# and small ( ~200 KB combined post-LTO ).
zstd = "0.13"
tar = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
# Reserved for mac-only deps. The mac install backend currently uses
# out-of-process shellouts ( ditto , pkill , open , launchctl-via-plist )
# the same way windows.rs uses robocopy / taskkill / explorer ; if we
# need typed plist serialization later , add `plist = "1"` here.

[dev-dependencies]
# Local HTTP mock for download.rs Range/SHA/resume unit tests.
wiremock = "0.6"
tempfile = "3"
# Reexpose macros + multi-thread runtime for #[tokio::test] in the dev tests.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
